--- a/content/modules/ROOT/pages/index.adoc
+++ b/content/modules/ROOT/pages/index.adoc
@@ -20,7 +20,7 @@ export TPA_SERVER_URL={tpa_server_url}
 
 [%hardbreaks]
 git config --global user.email '{user}@demo.redhat.com'
-git config --global user.name ‘{user}'
+git config --global user.name '{user}'
 git config --global commit.gpgsign true
 git config --global tag.gpgsign true
 git config --global gpg.x509.program /projects/home/bin/gitsign
